kubernetes/application/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app-deployment
  namespace: kustom
  labels:
    app: blog-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app-container
          image: rks007/kustomize:7adc6be1b60552b18e54d6602f33d3a3b434a3af
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
