kubernetes/application/app-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: kustom-service
  namespace: kustom
spec:
  type: ClusterIP
  selector:
    app: blog-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
