kubernetes/application/mongo-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: mongo-service
  namespace: kustom
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
