kubernetes/application/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: kustom  
spec:
  gatewayClassName: gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
