kubernetes/application/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: router
  namespace: kustom
spec:
  parentRefs:
  - name: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blog-app-service   
      port: 3000              # port that my service is listening on
      kind: Service
      group: ""                 # group is empty for core resources like Service
